[package]
name = "raxtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
